# llm-spendguard

./: .coveragerc  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SETUP.md  mkdocs.yml  pyproject.toml  requirements-docs.txt  saas.example.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml
docs/: AGENTIC.md  ARCHITECTURE.md  CNAME  INCIDENTS.md  PROMPT-EFFICIENCY.md  PROVIDERS.md  README.md  ROADMAP.md  SOLUTION-SPEC.md  SPEND_LEDGER.md  USING-WITH-CLAUDE.md  WAIVERS.md  index.md  learning-advisor.md  spendguard_architecting_win.md  work-attribution.md
docs/stylesheets/: extra.css
scripts/: README.md  bootstrap-remote.sh  recover_gpu_boxes.py  recover_gpu_m2a.py
scripts/audit/: audit_est_value.py  provider_truth.py  rebuild_server_billed.py  reconstruction_vs_target.py
scripts/forensic/: realtime_oracle.py
scripts/migrate/: charges_to_spend_events.py
scripts/reconstruct/: realtime_find_batch.py
scripts/slack/: worklog_canvas.py
scripts/taxonomy/: align_client_connections.py  realign_ventures.py
skills/: README.md
skills/spend/: SKILL.md
skills/spendguard-close/: SKILL.md
skills/spendguard-learn/: SKILL.md
skills/spendguard-prompts/: SKILL.md
skills/spendguard-reconcile/: SKILL.md
src/spendguard/: README.md  __init__.py  __main__.py  adapters.py  advise.py  advisor.py  anomaly.py  attribution.py  audit.py  backfill.py  bedrock_adapter.py  bootstrap.py  brief.py  budget.py  bulkgate.py  cacheaudit.py  cachetest.py  calibrate.py  callio.py  calls.py  cascade.py  chat.py  claudecode.py  cli.py  close.py  codex.py  codex_exec.py  compare.py  config.py  config_schema.py  conv.py  coverage.py  deid.py  emit.py  equivalence.py  estimate.py  experiment.py  gate.py  gpu_port.py  guard.py  (+45 more)
tests/: README.md  conftest.py  test_adapters.py  test_advise.py  test_advisor.py  test_anomaly.py  test_attribution.py  test_attribution_resolve.py  test_audit.py  test_auto_fresh.py  test_backfill.py  test_batch1.py  test_bootstrap.py  test_brief.py  test_bulkgate.py  test_cacheaudit.py  test_calibrate.py  test_cascade.py  test_central_caps.py  test_charges_migration.py  test_chat_digest.py  test_chat_value.py  test_classify_evidence.py  test_claudecode.py  test_cli.py  test_close.py  test_codex.py  test_codex_exec.py  test_conv.py  test_coverage.py  test_deid.py  test_emit_envelope.py  test_equivalence.py  test_executor_pool.py  test_experiment.py  test_gate.py  test_gate_autotune.py  test_gate_cli.py  test_gate_embeddings.py  test_gate_failclosed.py  (+53 more)
