[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spendguard"
version = "0.1.0"
description = "Provider-agnostic LLM batch cost gate, estimator, reconciler, and spend monitor."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []   # openai / anthropic / tiktoken are optional — the gate fails open if a SDK is absent

[project.optional-dependencies]
openai = ["openai>=1.0", "tiktoken"]
anthropic = ["anthropic>=0.40"]

[project.scripts]
spendguard = "spendguard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spendguard = ["prices.json"]
