[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-spendguard"
version = "0.2.4"
description = "A pre-spend GATE + learning advisor for LLM API cost: caps every call, prices from a verified table, and learns the cheapest config that keeps quality."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ashdamle" }]
keywords = ["llm", "openai", "anthropic", "cost", "budget", "finops", "tokens", "prompt-caching", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = []   # openai / anthropic / tiktoken are optional — the gate fails open if a SDK is absent

[project.urls]
Homepage = "https://github.com/ashdamle/llm-spendguard"
Repository = "https://github.com/ashdamle/llm-spendguard"
Changelog = "https://github.com/ashdamle/llm-spendguard/blob/main/CHANGELOG.md"

[project.optional-dependencies]
openai = ["openai>=1.0", "tiktoken"]
anthropic = ["anthropic>=0.40"]
otel = ["opentelemetry-sdk"]
all = ["openai>=1.0", "tiktoken", "anthropic>=0.40", "opentelemetry-sdk"]
dev = ["pytest>=7", "build", "twine"]

[project.scripts]
spendguard = "spendguard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spendguard = ["prices.json", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# only the runner is a pytest module; it subprocess-runs the script-style tests (some os.execv at import,
# which would hijack pytest if collected directly).
python_files = ["test_runner.py"]
addopts = "-q"
