[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-spendguard"
version = "0.7.1"
description = "A pre-spend GATE + learning advisor for LLM API cost: caps every call, prices from a verified table, and learns the cheapest config that keeps quality."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ash Damle" }]
keywords = ["llm", "openai", "anthropic", "cost", "budget", "finops", "tokens", "prompt-caching", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = []   # openai / anthropic / tiktoken are optional — the gate fails open if a SDK is absent

[project.urls]
Homepage = "https://llmspendguard.com"
Documentation = "https://docs.llmspendguard.com/"
Repository = "https://github.com/llmspendguard/llm-spendguard"
Changelog = "https://github.com/llmspendguard/llm-spendguard/blob/main/CHANGELOG.md"

[project.optional-dependencies]
openai = ["openai>=1.0", "tiktoken"]
anthropic = ["anthropic>=0.40"]
otel = ["opentelemetry-sdk"]
chat = ["cryptography>=3"]   # in-process AES for the claude.ai cookie decrypt (keeps the key out of argv)
deid = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2"]   # opt-in NER de-id; the regex floor needs no deps
all = ["openai>=1.0", "tiktoken", "anthropic>=0.40", "opentelemetry-sdk", "cryptography>=3"]   # excl. deid (heavy spaCy)
dev = ["pytest>=7", "pytest-xdist>=3", "build", "twine", "ruff>=0.6", "coverage[toml]>=7", "hypothesis>=6"]

[project.scripts]
spendguard = "spendguard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spendguard = ["prices.json", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# only the runner is a pytest module; it subprocess-runs the script-style tests (some os.execv at import,
# which would hijack pytest if collected directly).
python_files = ["test_runner.py"]
addopts = "-q"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
# Correctness over style: pyflakes (unused/undefined/redefined names) + the real bugbear footguns (mutable
# defaults, loop-var-in-closure). Deliberately NOT enforcing import-grouping/line-length — the codebase uses a
# terse one-line-import style on purpose. This keeps the gate high-signal (catches real bugs, no bikeshedding).
select = ["F", "B"]
ignore = ["F841", "B007", "B904", "E501"]   # unused-local, unused-loop-var, raise-from — low value here
